--- a/frontend/index.html
+++ b/frontend/index.html
@@ -142,6 +142,7 @@
 
 
 
+    <script src="config.js"></script>
     <script src="app.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
