feat: add Sports and Politics categories
- Added Sports and Politics buttons to frontend
- Updated NewsAPI source to handle category assignment
- Modified fetch task to iterate through Technology, Business, Science, Health, Sports, and Politics

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,6 +72,8 @@
                 <button class="filter-btn" data-category="Business">Business</button>
                 <button class="filter-btn" data-category="Science">Science</button>
                 <button class="filter-btn" data-category="Health">Health</button>
+                <button class="filter-btn" data-category="Sports">Sports</button>
+                <button class="filter-btn" data-category="Politics">Politics</button>
             </div>
             <div class="meta-filters" id="customSelectContainer">
                 <div class="custom-select" id="customSelectTrigger">
